# fairandom

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml  codacy.yml  codeql.yml  package.yml
cli/: CMakeLists.txt  cli.h  generate.c  main.c  verify.c
cmake/: clang-tidy.cmake  cpack.cmake  style.cmake
include/fairandom/: fairandom.h  hash.h  hex.h  proof.h  types.h
src/: CMakeLists.txt  fairandom.c  hash.c  hex.c  proof.c  random.c
tests/: CMakeLists.txt  fairandom_fullTest.c  gen_preDef.c  gen_random.c  hex_fromBytes.c  hex_toBytes.c  proof_preDef.c  proof_verify.c  test_fairandom.c
